# xi-editor

./: .gitmodules
rust/: Cargo.toml
rust/tree-sitter-plugin/: Cargo.toml  Makefile  README.md  build.rs  manifest.toml
rust/tree-sitter-plugin/src/: main.rs  tree_iter.rs
